fix: set z-index for title

--- a/frontend/src/components/cardLayout/cardLayout.css
+++ b/frontend/src/components/cardLayout/cardLayout.css
@@ -21,6 +21,7 @@
 .card-layout-title {
     font-size: 62px;
     font-weight: 600;
+    z-index: 1;
     width: 1000px;
     position: relative;
     margin: 0 auto;
